--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,87 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawerLayout"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".MainActivity"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="16dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:text="Smart Light Control"
-            android:textSize="24sp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btnLightOn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:text="Light ON" />
-
-            <Button
-                android:id="@+id/btnLightOff"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Light OFF" />
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:text="Smart Door Control"
-            android:textSize="24sp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btnDoorOpen"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:text="Open Door" />
-
-            <Button
-                android:id="@+id/btnDoorClose"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Close Door" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/textViewRelay1"
-            android:layout_width="338dp"
-            android:layout_height="82dp"
-            android:gravity="center"
-            android:text="Kata kata" />
-
-    </LinearLayout>
-
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navView"
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:menu="@menu/nav_menu" />
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/banner"
+        tools:layout_editor_absoluteX="31dp"
+        tools:layout_editor_absoluteY="67dp" />
 
-</androidx.drawerlayout.widget.DrawerLayout>
+    <ImageView
+        android:id="@+id/my_vector_icon"
+        android:layout_width="37dp"
+        android:layout_height="32dp"
+        android:src="@drawable/round_info_24"
+        tools:layout_editor_absoluteX="31dp"
+        tools:layout_editor_absoluteY="22dp" />
+
+    <ImageButton
+        android:id="@+id/imageButton3"
+        android:layout_width="161dp"
+        android:layout_height="130dp"
+        android:elevation="10dp"
+        android:padding="10dp"
+        app:srcCompat="@drawable/smartlight"
+        tools:layout_editor_absoluteX="31dp"
+        tools:layout_editor_absoluteY="228dp" />
+
+    <ImageButton
+        android:id="@+id/imageButton5"
+        android:layout_width="161dp"
+        android:layout_height="130dp"
+        android:elevation="10dp"
+        android:padding="10dp"
+        app:srcCompat="@drawable/comingsoon"
+        tools:layout_editor_absoluteX="29dp"
+        tools:layout_editor_absoluteY="381dp" />
+
+    <ImageButton
+        android:id="@+id/imageButton4"
+        android:layout_width="161dp"
+        android:layout_height="130dp"
+        android:elevation="10dp"
+        android:padding="10dp"
+        app:srcCompat="@drawable/smartlock"
+        tools:layout_editor_absoluteX="219dp"
+        tools:layout_editor_absoluteY="228dp" />
+
+
+</ScrollView>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
