--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.KeyCaps" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.UISMARTHOME" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:fontFamily">@font/dmsans</item>
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.KeyCaps" parent="Base.Theme.KeyCaps" />
+    <style name="Theme.UISMARTHOME" parent="Base.Theme.UISMARTHOME" />
 </resources>
